--- a/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
+++ b/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
@@ -3,3 +3,4 @@ javax.portlet.title=Nahodne citaty
 random_quote-next=Dal\u0161í
 random_quote-save=Ulo\u017Eit
 random_quote-err-null-value=Polo\u017eka je povinn\u00e1.
+random_quote-generator_error=Nemohl jsem na\u010Díst citát!
