Added event communication.

--- a/QuotesPortlet/src/main/resources/content/manager-quote-portlet_cs.properties
+++ b/QuotesPortlet/src/main/resources/content/manager-quote-portlet_cs.properties
@@ -2,3 +2,4 @@ javax.portlet.title=Spravce citatu
 quote_manager-edit=Upravit
 quote_manager-delete=Smazat
 quote_manager-add=P\u0159idat
+manager_quote-empty_list=Databáze citát\u016F je prázdná.
