Added portlet configuration.

--- a/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
+++ b/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
@@ -4,3 +4,4 @@ random_quote-next=Dal\u0161í
 random_quote-save=Ulo\u017Eit
 random_quote-err-null-value=Polo\u017eka je povinn\u00e1.
 random_quote-generator_error=Nemohl jsem na\u010Díst citát!
+random_quote-local_quotes=Zobrazovat pouze citáty z lokální databáze?
