Added better design of vies.

--- a/QuotesPortlet/src/main/resources/content/manager-quote-portlet_cs.properties
+++ b/QuotesPortlet/src/main/resources/content/manager-quote-portlet_cs.properties
@@ -1,5 +1,18 @@
 javax.portlet.title=Spravce citatu
+
 quote_manager-edit=Upravit
 quote_manager-delete=Smazat
 quote_manager-add=P\u0159idat
+
 manager_quote-empty_list=Databáze citát\u016F je prázdná.
+
+quote_manager-table_quote=Citát
+quote_manager-table_author=Autor
+quote_manager-table_created=Vytvo\u0159eno
+quote_manager-table_entity_author=U\u017Eivatel
+quote_manager-table_actions=Akce
+
+quote_manager-form_add=P\u0159idat
+quote_manager-from_cancel=Zru\u0161it
+quote_manager-form_quote=Citát
+quote_manager-from_author=Autor
