--- a/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
+++ b/QuotesPortlet/src/main/resources/content/random-quote-portlet_cs.properties
@@ -2,6 +2,8 @@ javax.portlet.title=Nahodne citaty
 
 random_quote-next=Dal\u0161í
 random_quote-save=Ulo\u017Eit
+
 random_quote-err-null-value=Polo\u017eka je povinn\u00e1.
 random_quote-generator_error=Nemohl jsem na\u010Díst citát!
-random_quote-local_quotes=Zobrazovat pouze citáty z lokální databáze?
+
+random_quote-show_local=Zobrazovat pouze citaty z lokalni databaze?
